@@ -1,0 +1,4 @@
+cmocka is an elegant unit testing framework for C with support for
+mock objects. It only requires the standard C library, works on a
+range of computing platforms (including embedded) and with different
+compilers.
